welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:10: error: ')' expected but 'else' found.
  else if ((a<9 || a>21) && b > 9 && b < 21)
  ^